[package]
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2021"
include = ["src/lib.rs", "LICENSE", "README.md"]
name = "frontmatter"
version = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(wasm)'.dev-dependencies]
wasm-bindgen = "0.2"

[features]
yaml = ["serde", "serde_yaml"]
toml = ["serde", "toml_edit"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.14", optional = true }
thiserror = "1.0.37"
toml_edit = { version = "0.15.0", features=["easy"],optional = true }
